--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,4 +16,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Suggests: 
     covr,
-    testthat
+    testthat,
+    spelling
+Language: en-US
